--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">FlickrGallery</string>
     <string name="search_hint">Search...</string>
+    <string name="try_again">Try again</string>
+    <string name="error_description">Oops! There was an error. Please try again.</string>
+    <string name="not_found_description">There are no results.</string>
 </resources>
