--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="try_again">Try again</string>
     <string name="error_description">Oops! There was an error. Please try again.</string>
     <string name="not_found_description">There are no results.</string>
+
+    <string name="notification_channel_description">Notifies you whenever you are downloading a favorite image.</string>
+    <string name="notification_description">We are downloading your favorite photo!</string>
+    <string name="notification_title">Downloading</string>
 </resources>
